--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: <b>V</b>ibration and Acoustics Engineering Laboratory" # the website title (if blank, full name will be used instead)
+title: <b>V</b>ibration and Acoustics Engineering Laboratory # the website title (if blank, full name will be used instead)
 first_name: Christopher
 middle_name: 
 last_name: Sugino
