--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: <b>V</b>ibration and <b>A</b>coustics <b>E</b>ngineering <b>L</b>aboratory # the website title (if blank, full name will be used instead)
+title: Vibration and Acoustics Engineering Laboratory # the website title (if blank, full name will be used instead)
 first_name: Christopher
 middle_name: 
 last_name: Sugino
